--- a/Resources/Prototypes/Roles/Jobs/Fun/visitors_startinggear.yml
+++ b/Resources/Prototypes/Roles/Jobs/Fun/visitors_startinggear.yml
@@ -12,11 +12,11 @@
     head: ClothingHeadHatCaptain
     neck: ClothingNeckCloakCap
     id: VisitorPDA
-    belt: NFWeaponEnergyPistolDisabler # Frontier: WeaponDisabler<NFWeaponEnergyPistolDisabler
+    belt: WeaponEnergyPistolDisabler # Frontier: WeaponDisabler<WeaponEnergyPistolDisabler
     back: ClothingBackpackCaptain
     ears: ClothingHeadsetAltCommand
     outerClothing: ClothingOuterArmorCaptainCarapace
-    pocket1: NFWeaponEnergyPistolDisabler # Frontier: WeaponDisabler<NFWeaponEnergyPistolDisabler
+    pocket1: WeaponEnergyPistolDisabler # Frontier: WeaponDisabler<WeaponEnergyPistolDisabler
 
 - type: startingGear
   id: VisitorCaptainAlt
@@ -28,11 +28,11 @@
     head: ClothingHeadHatCapcap
     neck: ClothingNeckMantleCap
     id: VisitorPDA
-    belt: NFWeaponEnergyPistolDisabler # Frontier: WeaponDisabler<NFWeaponEnergyPistolDisabler
+    belt: WeaponEnergyPistolDisabler # Frontier: WeaponDisabler<WeaponEnergyPistolDisabler
     back: ClothingBackpackSatchelCaptain
     ears: ClothingHeadsetAltCommand
     outerClothing: ClothingOuterArmorCaptainCarapace
-    pocket1: NFWeaponEnergyPistolDisabler # Frontier: WeaponDisabler<NFWeaponEnergyPistolDisabler
+    pocket1: WeaponEnergyPistolDisabler # Frontier: WeaponDisabler<WeaponEnergyPistolDisabler
 
 - type: startingGear
   id: VisitorCE
@@ -46,7 +46,7 @@
     back: ClothingBackpackDuffelEngineering
     ears: ClothingHeadsetCE
     outerClothing: ClothingOuterVestHazard
-    pocket1: NFWeaponEnergyPistolDisabler # Frontier: WeaponDisabler<NFWeaponEnergyPistolDisabler
+    pocket1: WeaponEnergyPistolDisabler # Frontier: WeaponDisabler<WeaponEnergyPistolDisabler
 
 - type: startingGear
   id: VisitorCEAlt
@@ -60,7 +60,7 @@
     back: ClothingBackpackSatchelEngineering
     ears: ClothingHeadsetCE
     outerClothing: ClothingOuterWinterCE
-    pocket1: NFWeaponEnergyPistolDisabler # Frontier: WeaponDisabler<NFWeaponEnergyPistolDisabler
+    pocket1: WeaponEnergyPistolDisabler # Frontier: WeaponDisabler<WeaponEnergyPistolDisabler
 
 - type: startingGear
   id: VisitorCMO
@@ -75,7 +75,7 @@
     ears: ClothingHeadsetCMO
     belt: ClothingBeltMedicalFilled
     outerClothing: ClothingOuterCoatLabCmo
-    pocket1: NFWeaponEnergyPistolDisabler # Frontier: WeaponDisabler<NFWeaponEnergyPistolDisabler
+    pocket1: WeaponEnergyPistolDisabler # Frontier: WeaponDisabler<WeaponEnergyPistolDisabler
 
 - type: startingGear
   id: VisitorCMOAlt
@@ -90,7 +90,7 @@
     ears: ClothingHeadsetCMO
     belt: ClothingBeltMedicalFilled
     outerClothing: ClothingOuterCoatLabCmo
-    pocket1: NFWeaponEnergyPistolDisabler # Frontier: WeaponDisabler<NFWeaponEnergyPistolDisabler
+    pocket1: WeaponEnergyPistolDisabler # Frontier: WeaponDisabler<WeaponEnergyPistolDisabler
 
 - type: startingGear
   id: VisitorHOP
@@ -100,11 +100,11 @@
     head: ClothingHeadHatHopcap
     neck: ClothingNeckCloakHop
     id: VisitorPDA
-    belt: NFWeaponEnergyPistolDisabler # Frontier: WeaponDisabler<NFWeaponEnergyPistolDisabler
+    belt: WeaponEnergyPistolDisabler # Frontier: WeaponDisabler<WeaponEnergyPistolDisabler
     back: ClothingBackpackDebug
     ears: ClothingHeadsetAltCommand
     outerClothing: ClothingOuterWinterHoP
-    pocket1: NFWeaponEnergyPistolDisabler # Frontier: WeaponDisabler<NFWeaponEnergyPistolDisabler
+    pocket1: WeaponEnergyPistolDisabler # Frontier: WeaponDisabler<WeaponEnergyPistolDisabler
 
 - type: startingGear
   id: VisitorHOPAlt
@@ -114,11 +114,11 @@
     head: ClothingHeadHatHopcap
     neck: ClothingNeckMantleHOP
     id: VisitorPDA
-    belt: NFWeaponEnergyPistolDisabler # Frontier: WeaponDisabler<NFWeaponEnergyPistolDisabler
+    belt: WeaponEnergyPistolDisabler # Frontier: WeaponDisabler<WeaponEnergyPistolDisabler
     back: ClothingBackpackSatchelLeather
     ears: ClothingHeadsetAltCommand
     outerClothing: ClothingOuterWinterHoP
-    pocket1: NFWeaponEnergyPistolDisabler # Frontier: WeaponDisabler<NFWeaponEnergyPistolDisabler
+    pocket1: WeaponEnergyPistolDisabler # Frontier: WeaponDisabler<WeaponEnergyPistolDisabler
 
 - type: startingGear
   id: VisitorHOS
@@ -137,7 +137,7 @@
     pocket1: WeaponDisabler
     pocket2: Magazine4.6x30mmSubMachineGunTopMountedFMJ
   inhand:
-  - NFWeaponSubMachineGunWt550 # Frontier: use NF prefix
+  - WeaponSubMachineGunWt550 # Frontier: use  prefix
 
 - type: startingGear
   id: VisitorHOSAlt
@@ -155,7 +155,7 @@
     pocket1: WeaponDisabler
     pocket2: Magazine4.6x30mmSubMachineGunTopMountedFMJ
   inhand:
-  - NFWeaponSubMachineGunWt550 # Frontier: use NF prefix
+  - WeaponSubMachineGunWt550 # Frontier: use  prefix
 
 - type: startingGear
   id: VisitorRD
@@ -169,7 +169,7 @@
     back: ClothingBackpackScience
     ears: ClothingHeadsetRD
     outerClothing: ClothingOuterCoatRD
-    pocket1: NFWeaponEnergyPistolDisabler # Frontier: WeaponDisabler<NFWeaponEnergyPistolDisabler
+    pocket1: WeaponEnergyPistolDisabler # Frontier: WeaponDisabler<WeaponEnergyPistolDisabler
 
 - type: startingGear
   id: VisitorRDAlt
@@ -183,7 +183,7 @@
     back: ClothingBackpackSatchelScience
     ears: ClothingHeadsetRD
     outerClothing: ClothingOuterCoatRD
-    pocket1: NFWeaponEnergyPistolDisabler # Frontier: WeaponDisabler<NFWeaponEnergyPistolDisabler
+    pocket1: WeaponEnergyPistolDisabler # Frontier: WeaponDisabler<WeaponEnergyPistolDisabler
 
 - type: startingGear
   id: VisitorQM
@@ -196,7 +196,7 @@
     back: ClothingBackpackCargo
     ears: ClothingHeadsetRD
     outerClothing: ClothingOuterWinterQM
-    pocket1: NFWeaponEnergyPistolDisabler # Frontier: WeaponDisabler<NFWeaponEnergyPistolDisabler
+    pocket1: WeaponEnergyPistolDisabler # Frontier: WeaponDisabler<WeaponEnergyPistolDisabler
     pocket2: AppraisalTool
 
 - type: startingGear
@@ -210,7 +210,7 @@
     back: ClothingBackpackSatchelCargo
     ears: ClothingHeadsetQM
     outerClothing: ClothingOuterWinterQM
-    pocket1: NFWeaponEnergyPistolDisabler # Frontier: WeaponDisabler<NFWeaponEnergyPistolDisabler
+    pocket1: WeaponEnergyPistolDisabler # Frontier: WeaponDisabler<WeaponEnergyPistolDisabler
     pocket2: AppraisalTool
 
 # Security
@@ -335,11 +335,11 @@
     ears: ClothingHeadsetSecurity
     eyes: ClothingEyesGlassesSecurity
     outerClothing: ClothingOuterCoatWarden
-    pocket1: NFWeaponEnergyPistolDisabler # Frontier: WeaponDisabler<NFWeaponEnergyPistolDisabler
+    pocket1: WeaponEnergyPistolDisabler # Frontier: WeaponDisabler<WeaponEnergyPistolDisabler
     pocket2: Zipties
   inhand:
   - FlashlightSeclite
-  - NFWeaponShotgunKammerer # Frontier: use NF prefix
+  - WeaponShotgunKammerer # Frontier: use  prefix
 
 - type: startingGear
   id: VisitorWardenAlt
@@ -354,11 +354,11 @@
     ears: ClothingHeadsetSecurity
     eyes: ClothingEyesGlassesSecurity
     outerClothing: ClothingOuterWinterWarden
-    pocket1: NFWeaponEnergyPistolDisabler # Frontier: WeaponDisabler<NFWeaponEnergyPistolDisabler
+    pocket1: WeaponEnergyPistolDisabler # Frontier: WeaponDisabler<WeaponEnergyPistolDisabler
     pocket2: Zipties
   inhand:
   - FlashlightSeclite
-  - NFWeaponShotgunKammerer # Frontier: WeaponShotgunKammerer<NFWeaponShotgunKammerer
+  - WeaponShotgunKammerer # Frontier: WeaponShotgunKammerer<WeaponShotgunKammerer
 
 # Cargo
 
@@ -729,7 +729,7 @@
     back: ClothingBackpackSatchelLeather
     ears: ClothingHeadsetMedical
     eyes: ClothingEyesHudMedical
-    pocket1: NFBulletFoam # Frontier: use NF variant
+    pocket1: BulletFoam # Frontier: use  variant
     pocket2: PillSpaceDrugs
   inhand:
   - FoamCrossbow
@@ -932,7 +932,7 @@
     head: ClothingHeadHatTophat
     id: VisitorPDA
     back: ClothingBackpack
-    suitstorage: NFWeaponShotgunDoubleBarreled # Frontier: WeaponShotgunDoubleBarreledRubber<NFWeaponShotgunDoubleBarreled
+    suitstorage: WeaponShotgunDoubleBarreled # Frontier: WeaponShotgunDoubleBarreledRubber<WeaponShotgunDoubleBarreled
     ears: ClothingHeadsetService
     eyes: ClothingEyesGlassesSunglasses
     outerClothing: ClothingOuterArmorBasicSlim
@@ -951,7 +951,7 @@
     ears: ClothingHeadsetService
     eyes: ClothingEyesHudBeer
     outerClothing: ClothingOuterWinterBar
-    pocket1: NFWeaponShotgunSawn # Frontier: use NF prefix
+    pocket1: WeaponShotgunSawn # Frontier: use  prefix
     pocket2: DrinkTequilaBottleFull
 
 - type: startingGear
@@ -1568,7 +1568,7 @@
     head: ClothingHeadSafari
     id: VisitorPDA
     belt: ClothingBeltStorageWaistbag
-    back: NFWeaponShotgunDoubleBarreled # Frontier: WeaponShotgunDoubleBarreledRubber<NFWeaponShotgunDoubleBarreled
+    back: WeaponShotgunDoubleBarreled # Frontier: WeaponShotgunDoubleBarreledRubber<WeaponShotgunDoubleBarreled
     ears: ClothingHeadsetService
     pocket1: WeaponFlareGun
     pocket2: PillCanisterDylovene
@@ -1679,7 +1679,7 @@
     back: ClothingBackpackDuffelEngineering
     #ears: # No headsets.
     outerClothing: ClothingOuterVestHazard
-    pocket1: NFWeaponEnergyPistolDisabler # Frontier: WeaponDisabler<NFWeaponEnergyPistolDisabler
+    pocket1: WeaponEnergyPistolDisabler # Frontier: WeaponDisabler<WeaponEnergyPistolDisabler
 
 - type: startingGear
   id: ChallengeVictimCEAlt
@@ -1693,7 +1693,7 @@
     back: ClothingBackpackSatchelEngineering
     #ears: # No headsets.
     outerClothing: ClothingOuterWinterCE
-    pocket1: NFWeaponEnergyPistolDisabler # Frontier: WeaponDisabler<NFWeaponEnergyPistolDisabler
+    pocket1: WeaponEnergyPistolDisabler # Frontier: WeaponDisabler<WeaponEnergyPistolDisabler
 
 # CHALLENGE
 # carefully consider everything you add to these. These are meant for roles that are placed in survival situations where every item will be a resource.
@@ -1706,7 +1706,7 @@
     head: ClothingHeadHatHopcap
     neck: ClothingNeckCloakHop
     id: VisitorPDA
-    belt: NFWeaponEnergyPistolDisabler # Frontier: WeaponDisabler<NFWeaponEnergyPistolDisabler
+    belt: WeaponEnergyPistolDisabler # Frontier: WeaponDisabler<WeaponEnergyPistolDisabler
     back: ClothingBackpackDebug
     #ears: #No headsets.
     outerClothing: ClothingOuterWinterHoP
@@ -1719,7 +1719,7 @@
     head: ClothingHeadHatHopcap
     neck: ClothingNeckMantleHOP
     id: VisitorPDA
-    belt: NFWeaponEnergyPistolDisabler # Frontier: WeaponDisabler<NFWeaponEnergyPistolDisabler
+    belt: WeaponEnergyPistolDisabler # Frontier: WeaponDisabler<WeaponEnergyPistolDisabler
     back: ClothingBackpackSatchelLeather
     #ears: #No headsets.
     outerClothing: ClothingOuterWinterHoP
@@ -1840,7 +1840,7 @@
     back: ClothingBackpackSatchelLeather
     belt: ClothingBeltUtility
     ears: ClothingHeadsetFreelance
-    pocket1: NFWeaponPistolFlintlock # Frontier: WeaponPistolFlintlock<NFWeaponPistolFlintlock
+    pocket1: WeaponPistolFlintlock # Frontier: WeaponPistolFlintlock<WeaponPistolFlintlock
     pocket2: HandheldGPSBasic
   inhand:
     - Cutlass
@@ -1858,14 +1858,14 @@
   equipment:
     head: ClothingHeadBandBlack
   inhand:
-    - NFWeaponShotgunBlunderbuss # Frontier: use NF prefix
+    - WeaponShotgunBlunderbuss # Frontier: use  prefix
 
 - type: startingGear
   id: PirateScoonerAltD
   parent: PirateScoonerAltA
   equipment:
     head: ClothingHeadHatPirateTricord
-    pocket1: NFWeaponRevolverPirate # Frontier: WeaponRevolverPirate<NFWeaponRevolverPirate
+    pocket1: WeaponRevolverPirate # Frontier: WeaponRevolverPirate<WeaponRevolverPirate
 
 - type: startingGear
   id: PirateCaptainScooner
@@ -1875,7 +1875,7 @@
     ears: ClothingHeadsetAltFreelancer
     neck: ClothingNeckCloakPirateCap
     outerClothing: ClothingOuterVestWeb
-    pocket1: NFWeaponRevolverPirate # Frontier: WeaponRevolverPirate<NFWeaponRevolverPirate
+    pocket1: WeaponRevolverPirate # Frontier: WeaponRevolverPirate<WeaponRevolverPirate
 
 ### Other
 
@@ -1890,7 +1890,7 @@
     belt: ClothingBeltMercenaryWebbing # Frontier: Merc<Mercenary
     ears: ClothingHeadsetGrey
     outerClothing: ClothingOuterVestWebMercenary # Frontier: Merc<Mercenary
-    pocket1: NFWeaponEnergyPistolLaserSvalinn # Frontier: WeaponLaserSvalinn<NFWeaponEnergyPistolLaserSvalinn
+    pocket1: WeaponEnergyPistolLaserSvalinn # Frontier: WeaponLaserSvalinn<WeaponEnergyPistolLaserSvalinn
     pocket2: RadioHandheld
 
 - type: startingGear
