--- a/Resources/Prototypes/_NF/Catalog/Fills/Backpacks/duffelbag.yml
+++ b/Resources/Prototypes/_NF/Catalog/Fills/Backpacks/duffelbag.yml
@@ -80,7 +80,7 @@
       contents:
         - id: BoxSurvival
         - id: Cutlass
-        - id: NFWeaponRevolverPirate
+        - id: WeaponRevolverPirate
         - id: ClothingEyesEyepatch
 
 #Departmental EVA bundles
