--- a/Resources/Prototypes/_NF/Catalog/Fills/Crates/pirate.yml
+++ b/Resources/Prototypes/_NF/Catalog/Fills/Crates/pirate.yml
@@ -25,9 +25,9 @@
         amount: 2
       - id: NFCannonBall
         amount: 2
-      - id: NFWeaponPistolFlintlock
+      - id: WeaponPistolFlintlock
         amount: 4
-      - id: NFWeaponShotgunBlunderbuss
+      - id: WeaponShotgunBlunderbuss
         amount: 2
       - id: ClothingHeadsetFreelance  # Frontier
         amount: 3  # Frontier
