--- a/Resources/Prototypes/_NF/Catalog/Fills/Lockers/heads.yml
+++ b/Resources/Prototypes/_NF/Catalog/Fills/Lockers/heads.yml
@@ -69,7 +69,7 @@
   - type: StorageFill
     contents:
     - id: WeaponCaseHeavyCdet
-    - id: NFWeaponPistolMk58
+    - id: WeaponPistolMk58
       amount: 1
     - id: Magazine9x19mmPistolFMJ
       amount: 2
