--- a/Resources/Prototypes/_NF/Catalog/VendingMachines/Inventories/picknpackvend.yml
+++ b/Resources/Prototypes/_NF/Catalog/VendingMachines/Inventories/picknpackvend.yml
@@ -2,11 +2,11 @@
   id: PickNPackInventory
   startingInventory:
   # Weapons
-    NFWeaponPistolMk58: 6
-    NFWeaponPistolPollock: 6
-    NFWeaponRifleAssaultGestio: 6
-    NFWeaponRifleAssaultNovaliteC1: 6
-    NFWeaponShotgunKammerer: 6
+    WeaponPistolMk58: 6
+    WeaponPistolPollock: 6
+    WeaponRifleAssaultGestio: 6
+    WeaponRifleAssaultNovaliteC1: 6
+    WeaponShotgunKammerer: 6
   # Magazines
     NFMagazinePistol35Empty: 6
     NFMagazineLowCapacityRifle30Empty: 6
