--- a/Resources/Prototypes/Entities/Objects/Weapons/Throwable/scattering_grenades.yml
+++ b/Resources/Prototypes/Entities/Objects/Weapons/Throwable/scattering_grenades.yml
@@ -161,7 +161,7 @@
     - state: primed
       map: ["enum.TriggerVisualLayers.Base"]
   - type: ScatteringGrenade
-    fillPrototype: NFBulletFoam # Frontier: use NF variant
+    fillPrototype: BulletFoam # Frontier: use NF variant
     capacity: 30
     velocity: 30
   - type: OnUseTimerTrigger
