--- a/Resources/Prototypes/_NF/Catalog/Fills/Crates/nfsdarmory.yml
+++ b/Resources/Prototypes/_NF/Catalog/Fills/Crates/nfsdarmory.yml
@@ -6,7 +6,7 @@
   components:
   - type: StorageFill
     contents:
-      - id: NFWeaponSubMachineGunWt550
+      - id: WeaponSubMachineGunWt550
         amount: 2
       - id: Magazine4.6x30mmSubMachineGunTopMountedFMJ
         amount: 4
@@ -19,7 +19,7 @@
   components:
   - type: StorageFill
     contents:
-      - id: NFWeaponShotgunEnforcer
+      - id: WeaponShotgunEnforcer
         amount: 2
       - id: AmmoBox12_gaugeBuckshot
         amount: 3
@@ -54,7 +54,7 @@
   components:
   - type: StorageFill
     contents:
-      - id: NFWeaponEnergyRifleCarbine
+      - id: WeaponEnergyRifleCarbine
         amount: 3
 
 - type: entity
@@ -65,7 +65,7 @@
   components:
   - type: StorageFill
     contents:
-    - id: NFWeaponPistolMk58
+    - id: WeaponPistolMk58
       amount: 2
     - id: Magazine9x19mmPistolFMJ
       amount: 4
@@ -78,19 +78,19 @@
   components:
   - type: StorageFill
     contents:
-    - id: NFWeaponRifleAssaultLecter
+    - id: WeaponRifleAssaultLecter
       amount: 5
-    - id: NFWeaponRifleAssaultVulcan
+    - id: WeaponRifleAssaultVulcan
       amount: 4
-    - id: NFWeaponSubMachineGunWt550
+    - id: WeaponSubMachineGunWt550
       amount: 4
-    - id: NFWeaponShotgunEnforcer
+    - id: WeaponShotgunEnforcer
       amount: 5
-    - id: NFWeaponEnergyRifleCarbine
+    - id: WeaponEnergyRifleCarbine
       amount: 4
-    - id: NFWeaponEnergySubMachineGunDeltaV
+    - id: WeaponEnergySubMachineGunDeltaV
       amount: 4
-    - id: NFWeaponPistolMk58
+    - id: WeaponPistolMk58
       amount: 4
 
 - type: entity
@@ -101,17 +101,17 @@
   components:
   - type: StorageFill
     contents:
-    - id: NFWeaponEnergyPistolDisabler
+    - id: WeaponEnergyPistolDisabler
       amount: 5
-    - id: NFWeaponPistolUniversalNfsdLessLethal
+    - id: WeaponPistolUniversalNfsdLessLethal
       amount: 4
-    - id: NFWeaponEnergySubMachineGunDisabler
+    - id: WeaponEnergySubMachineGunDisabler
       amount: 5
-    - id: NFWeaponRifleAssaultLecterLessLethal
+    - id: WeaponRifleAssaultLecterLessLethal
       amount: 4
-    - id: NFWeaponRifleAssaultVulcanLessLethal
+    - id: WeaponRifleAssaultVulcanLessLethal
       amount: 4
-    - id: NFWeaponShotgunEnforcerLessLethal
+    - id: WeaponShotgunEnforcerLessLethal
       amount: 4
-    - id: NFWeaponEnergySubMachineGunDeltaV
+    - id: WeaponEnergySubMachineGunDeltaV
       amount: 4
