--- a/Resources/Prototypes/_NF/Catalog/pirate_uplink_catalog.yml
+++ b/Resources/Prototypes/_NF/Catalog/pirate_uplink_catalog.yml
@@ -136,13 +136,13 @@
           - PirateUplink
     - !type:BuyerJobCondition
       # whitelist:
-        # - NFptain
+        # - ptain
 
 - type: listing
   id: UplinkPirateBlunderbuss
   name:  uplink-pirate-blunderbuss-name
   description: uplink-pirate-blunderbuss-desc
-  productEntity: NFWeaponShotgunBlunderbuss
+  productEntity: WeaponShotgunBlunderbuss
   icon: { sprite: Objects/Weapons/Guns/Shotguns/blunderbuss.rsi, state: icon }
   cost:
     Doubloon: 2
@@ -158,7 +158,7 @@
   id: UplinkPirateRevolver
   name:  uplink-pirate-revolver-name
   description: uplink-pirate-revolver-desc
-  productEntity: NFWeaponRevolverPirate
+  productEntity: WeaponRevolverPirate
   icon: { sprite: Objects/Weapons/Guns/Revolvers/pirate_revolver.rsi, state: icon }
   cost:
     Doubloon: 1
@@ -190,7 +190,7 @@
   id: UplinkFlintlock
   name:  uplink-pirate-flintlock-name
   description: uplink-pirate-flintlock-desc
-  productEntity: NFWeaponPistolFlintlock
+  productEntity: WeaponPistolFlintlock
   icon: { sprite: Objects/Weapons/Guns/Snipers/flintlock.rsi, state: base }
   cost:
     Doubloon: 2
@@ -292,7 +292,7 @@
   id: UplinkPirateShotgunAmmo
   name:  uplink-pirate-shotgunammo-name
   description: uplink-pirate-shotgunammo-desc
-  productEntity: NFAmmunitionBoxShellShotgunBuckshot
+  productEntity: AmmunitionBoxShellShotgunBuckshot
   icon: { sprite: Objects/Weapons/Guns/Ammunition/Casings/shotgun_shell.rsi, state: base }
   cost:
     Doubloon: 2
@@ -308,7 +308,7 @@
   id: UplinkPirateRevolverAmmo
   name:  uplink-pirate-revolverammo-name
   description: uplink-pirate-revolverammo-desc
-  productEntity: NFAmmunitionBoxPistol45
+  productEntity: AmmunitionBoxPistol45
   icon: { sprite: _NF/Objects/Weapons/Guns/Ammunition/Boxes/pistol.rsi, state: base }
   cost:
     Doubloon: 2
@@ -324,7 +324,7 @@
   id: UplinkPirateFlintlockAmmo
   name:  uplink-pirate-flintlockammo-name
   description: uplink-pirate-flintlockammo-desc
-  productEntity: NFAmmunitionBoxRifle60
+  productEntity: AmmunitionBoxRifle60
   icon: { sprite: _NF/Objects/Weapons/Guns/Ammunition/Boxes/rifle_big.rsi, state: base }
   cost:
     Doubloon: 2
