--- a/Resources/Prototypes/_NF/Catalog/uplink_catalog.yml
+++ b/Resources/Prototypes/_NF/Catalog/uplink_catalog.yml
@@ -4,7 +4,7 @@
   id: UplinkNFPistolViper
   name: uplink-pistol-viper-name
   description: uplink-pistol-viper-desc
-  productEntity: NFWeaponPistolViper
+  productEntity: WeaponPistolViper
   discountCategory: rareDiscounts
   cost:
     Telecrystal: 3
@@ -15,7 +15,7 @@
   id: UplinkNFRevolverRitland
   name: uplink-revolver-ritland-name
   description: uplink-revolver-ritland-desc
-  productEntity: NFWeaponRevolverRitland45
+  productEntity: WeaponRevolverRitland45
   discountCategory: rareDiscounts
   cost:
     Telecrystal: 4
